--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,9 @@
 name: Docker
 
 on:
-  schedule:
-    - cron: '0 1 * * 0' # every sunday at 1am
   push:
     branches:
-      - '**'
+      - main
     tags:
       - 'v*.*.*'
     paths:
